<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafetyApplication</string>

    <!-- BUTTON TEXTS -->
    <string name="btn_addphoto_text"> Add a Photo </string>
    <string name="btn_situation_text"> Situation Type </string>
    <string name="btn_priority_text"> Set Priority </string>
    <string name="btn_description_text"> Add a Description (Optional) </string>
    <string name="btn_sendreport_text"> Submit </string>

    <!-- LABEL TEXTS -->
    <string name="lbl_report_date"> Current Time and Date </string>
    <string name="lbl_img"> No image taken </string>
    <string name="lbl_report_location"> Current location </string>
    <string name="lbl_report_location_updating"> Finding location . . . </string>
    <string name="lbl_img_photo_description"> Report photo </string>
    <string name="lbl_img_location_description"> GoogleMap static image </string>
    <string name="title_activity_startup">StartupActivity</string>
    <string name="lbl_appteam"> Appteam </string>
    <string name="lbl_startupText"> Safety Observation App</string>
    <string name="lbl_version"> 0.1 </string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
