<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_floating_material_dark"
    tools:context="nu.appteam.safetyapplication2015.main.StartupActivity">

    <TextView
        android:text="@string/lbl_appteam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:layout_marginTop="45pt"
        android:typeface="serif"
        android:textSize="9pt"/>

    <TextView
        android:text="@string/lbl_startupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:layout_marginTop="60pt"
        android:typeface="serif"
        android:textSize="9pt"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

    <TextView
        android:text="@string/lbl_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:layout_marginTop="80pt"
        android:typeface="serif"
        android:textSize="4pt"/>

</RelativeLayout>
