<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:background="@color/background_material_dark"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:orientation="vertical"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- CURRENT DATE AND TIME LABEL -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10pt"

                android:text="@string/lbl_report_date"
                android:textColor="@color/abc_primary_text_material_dark"
                />

            <!-- DATE AND TIME -->
            <TextView android:id="@+id/lbl_report_date"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:gravity="center"

                android:textSize="12pt"
                android:textColor="@color/abc_primary_text_material_dark"
                />

            <!-- NO IMAGE TAKEN LABEL
            <TextView android:id="@+id/lbl_report_image"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="1pt"
                android:layout_marginTop="10pt"

                android:text="@string/lbl_img"
                android:textColor="@color/abc_primary_text_material_dark"
                />-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5pt"
                android:layout_marginTop="5pt">

            <!-- PHOTO IMAGE VIEW -->
            <ImageView android:id="@+id/img_report_photo"

                android:src="@drawable/ic_camera_google"

                android:layout_width="100pt"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"


                android:layout_gravity="center_horizontal"

                android:adjustViewBounds="true"
                android:contentDescription="@string/lbl_img_photo_description"

                />

            <TextView
                android:id="@+id/myImageViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/img_report_photo"
                android:layout_alignTop="@+id/img_report_photo"
                android:layout_alignRight="@+id/img_report_photo"
                android:layout_alignBottom="@+id/img_report_photo"

                android:layout_marginTop="70pt"
                android:gravity="center"

                android:textColor="#FFFFFF" />

            </RelativeLayout>

            <!-- ADD PHOTO BUTTON
            <Button android:id="@+id/btn_report_photo"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="30pt"
                android:width="160pt"

                android:layout_gravity="center_horizontal"

                android:text="@string/btn_addphoto_text"
                android:onClick="addPhoto"
                /> -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="7.5pt"
                android:paddingRight="7.5pt">

                <!-- SITUATIONTYPE BUTTON -->
                <Button android:id="@+id/btn_report_situationtype"

                    android:layout_width="80pt"
                    android:layout_height="30pt"

                    android:text="@string/btn_situation_text"
                    />

                <!-- PRIORITY BUTTON -->
                <Button android:id="@+id/btn_report_priority"

                    android:layout_width="80pt"
                    android:layout_height="30pt"

                    android:text="@string/btn_priority_text"
                    />

            </LinearLayout>

            <!-- DESCRIPTION BUTTON -->
            <Button android:id="@+id/btn_report_description"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="30pt"
            android:width="160pt"

            android:layout_gravity="center_horizontal"

            android:text="@string/btn_description_text"
            />

            <!--
            <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10pt"

            android:text="@string/lbl_report_location"
            android:textColor="@color/abc_primary_text_material_dark"/>


            <TextView android:id="@+id/lbl_report_location"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:gravity="center"

            android:textSize="12pt"
            android:text="@string/lbl_report_location_updating"
            android:textColor="@color/abc_primary_text_material_dark"
            />

            <ImageView android:id="@+id/img_report_location"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5pt"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="10pt"
                android:paddingRight="10pt"

                android:adjustViewBounds="true"
                android:contentDescription="@string/lbl_img_location_description"
            />

            -->

            <!-- SEND REPORT BUTTON -->
            <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="30pt"
            android:width="160pt"

            android:layout_marginTop="10pt"
            android:layout_marginBottom="5pt"
            android:layout_gravity="center_horizontal"

            android:text="@string/btn_sendreport_text"
            android:onClick="sendReport"
            />

    </LinearLayout>

</ScrollView>